Fix dark mode for universal body

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@
 h1 {
   font-family: 'Ethnocentric', sans-serif;
 }
+
+/* dark mode apply in body */
+@layer base {
+  body {
+    @apply bg-white dark:bg-black;
+  }
+}
